Remove template usages, use RelationMetadata as main table entity
All table and partition related writing and reading is based
now on the RelationMetadata entity. Especially, partitioned tables
won't use templates anymore.

Note:
This change won't remove the mapping of any IndexMetadata which is
still used internally e.g the index change listeners are still
working with an IndexMetadata. This will/must be changed in a
follow up work.

Relates to #17518.